Added dark theme to quasar config Added background and dark color to css Added layout with nav drawer and programmatic navigation Removed default Quasar image in index

--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -14,9 +14,9 @@
 
 $primary   = #1976D2
 $secondary = #26A69A
-$accent    = #9C27B0
+$accent    = #2b3648
 
-$dark      = #1D1D1D
+$dark      = #212936
 
 $positive  = #21BA45
 $negative  = #C10015
