Theme change to dark red

--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -12,13 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   = #1976D2
-$secondary = #26A69A
-$accent    = #2b3648
+$primary   = #d32f2f
+$secondary = #62717b
+$accent    = #660000
 
-$dark      = #212936
+$dark      = #202020
 
-$positive  = #21BA45
+$positive  = #499c43
 $negative  = #C10015
-$info      = #31CCEC
+$info      = #8382f2
 $warning   = #F2C037
