General style updates. Moved external links from component to global. Scoped external links to only _blank targets. Reduced padding on q-card-sections. Cleaned up styl files. Changed top bar to secondary.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,5 +1,19 @@
-// app global css in Stylus form
-body.body--dark {
-  background: #131313;
-  color: #FFF;
-}
+// Parley Global CSS Overrides
+
+// Darken background
+body.body--dark
+  background #131313
+  color #FFF
+
+// Reduce padding on q-card-section
+.q-card__section--vert
+  padding 8px
+
+// Color external links red
+a:link[target="_blank"],
+a:visited[target="_blank"],
+a:active[target="_blank"]
+  color $primary
+
+a:hover[target="_blank"]
+  color #FFF
