--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -1,24 +1,15 @@
-// Quasar Stylus Variables
-// --------------------------------------------------
-// To customize the look and feel of this app, you can override
-// the Stylus variables found in Quasar's source Stylus files.
+// Parley Application Variables
 
-// Check documentation for full list of Quasar variables
-
-// Your own variables (that are declared here) and Quasar's own
-// ones will be available out of the box in your .vue/.styl files
-
-// It's highly recommended to change the default colors
-// to match your app's branding.
-// Tip: Use the "Theme Builder" on Quasar's documentation website.
-
-$primary   = #d32f2f
-$secondary = #62717b
+// Primary Theme
+$primary   = #D32F2F
+$secondary = #424242
 $accent    = #660000
 
+// Dark Theme
 $dark      = #202020
 
+// Action Colors
 $positive  = #499c43
-$negative  = #C10015
+$negative  = #B71C1C
 $info      = #8382f2
 $warning   = #F2C037
